// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`insight-engine gate failure audit (demo dataset, Fase 7.2) > UDS: rule-failure breakdown 1`] = `
{
  "contributionPositiveAudit": {
    "failing": 0,
    "items": [],
    "passing": 0,
    "totalSelectedContributionUp": 0,
  },
  "failingItems": [
    {
      "accion": "Contactar a Mercado Central para entender la caída de frecuencia — confirmar si es estacional o requiere atención comercial.",
      "description": "Mercado Central tiene una frecuencia de compra de 13.00, 2.8σ por debajo del promedio del grupo (19.75). Cliente atendido por Ana González en Ahuachapán.",
      "dimensionId": "cliente",
      "failedRules": [
        "materiality",
      ],
      "impactoUsdRounded": 68,
      "impactoUsdSource": "cross_varAbs",
      "insightTypeId": "outlier",
      "member": "Mercado Central",
      "metricId": "frecuencia_compra",
      "rank": 10,
      "scoreRounded": 0.7083,
      "severity": "ALTA",
      "title": "↓ Mercado Central — frecuencia de compra baja",
    },
    {
      "accion": "Reunirse con quien atiende Roberto Méndez esta semana: aporta 113% de la caída del grupo (1,332). Definir plan específico antes de tocar al…",
      "description": "Roberto Méndez pasó de 5,088 a 3,756 (1,332). Representa el 113% del cambio total del grupo (1,179 en agregado).",
      "dimensionId": "supervisor",
      "failedRules": [
        "pareto",
      ],
      "impactoUsdRounded": 1332,
      "impactoUsdSource": "recuperable",
      "insightTypeId": "contribution",
      "member": "Roberto Méndez",
      "metricId": "venta",
      "rank": 17,
      "scoreRounded": 1,
      "severity": "CRITICA",
      "title": "Roberto Méndez arrastra 113% del caída agregada",
    },
    {
      "accion": "Confirmar con Supermercado Nacional si el salto de 133% es base nueva o un pedido extraordinario; ajustar forecast del próximo período segú…",
      "description": "Supermercado Nacional pasó de 109 a 254 (+133%). Es un salto fuera del rango habitual entre períodos consecutivos. Cliente atendido por Ana González en Ahuachapán.",
      "dimensionId": "cliente",
      "failedRules": [
        "materiality",
        "pareto",
      ],
      "impactoUsdRounded": 310,
      "impactoUsdSource": "cross_varAbs",
      "insightTypeId": "change",
      "member": "Supermercado Nacional",
      "metricId": "venta",
      "rank": 18,
      "scoreRounded": 1,
      "severity": "CRITICA",
      "title": "Supermercado Nacional subió 133% vs período anterior",
    },
    {
      "accion": "Documentar qué hizo Pulpería San José en estos 3 meses para crecer 146% y replicarlo en cuentas con perfil similar.",
      "description": "Pulpería San José acumula 3 meses con crecimiento de 146%. La pendiente es estadísticamente clara (R² ≥ 0.7): no es ruido del mes. Cliente atendido por Ana González en Ahuachapán.",
      "dimensionId": "cliente",
      "failedRules": [
        "materiality",
      ],
      "impactoUsdRounded": 143,
      "impactoUsdSource": "cross_varAbs",
      "insightTypeId": "trend",
      "member": "Pulpería San José",
      "metricId": "ventas_por_cliente",
      "rank": 19,
      "scoreRounded": 1,
      "severity": "CRITICA",
      "title": "Pulpería San José — crecimiento sostenido (146% en 3 meses)",
    },
    {
      "accion": "Documentar qué hizo Mayoreo Santa Ana en estos 3 meses para crecer 133% y replicarlo en cuentas con perfil similar.",
      "description": "Mayoreo Santa Ana acumula 3 meses con crecimiento de 133%. La pendiente es estadísticamente clara (R² ≥ 0.7): no es ruido del mes. Cliente atendido por Ana González en Santa Ana.",
      "dimensionId": "cliente",
      "failedRules": [
        "materiality",
      ],
      "impactoUsdRounded": 196,
      "impactoUsdSource": "cross_varAbs",
      "insightTypeId": "trend",
      "member": "Mayoreo Santa Ana",
      "metricId": "skus_activos",
      "rank": 20,
      "scoreRounded": 1,
      "severity": "ALTA",
      "title": "Mayoreo Santa Ana — crecimiento sostenido (133% en 3 meses)",
    },
  ],
  "failsByMetricAndRule": {
    "frecuencia_compra": {
      "materiality": 1,
      "monetaryCoherence": 0,
      "narrativeCoherence": 0,
      "pareto": 0,
    },
    "skus_activos": {
      "materiality": 1,
      "monetaryCoherence": 0,
      "narrativeCoherence": 0,
      "pareto": 0,
    },
    "venta": {
      "materiality": 1,
      "monetaryCoherence": 0,
      "narrativeCoherence": 0,
      "pareto": 2,
    },
    "ventas_por_cliente": {
      "materiality": 1,
      "monetaryCoherence": 0,
      "narrativeCoherence": 0,
      "pareto": 0,
    },
  },
  "failsByRule": {
    "materiality": 4,
    "monetaryCoherence": 0,
    "narrativeCoherence": 0,
    "pareto": 2,
  },
  "failsByTypeAndRule": {
    "change": {
      "materiality": 1,
      "monetaryCoherence": 0,
      "narrativeCoherence": 0,
      "pareto": 1,
    },
    "contribution": {
      "materiality": 0,
      "monetaryCoherence": 0,
      "narrativeCoherence": 0,
      "pareto": 1,
    },
    "outlier": {
      "materiality": 1,
      "monetaryCoherence": 0,
      "narrativeCoherence": 0,
      "pareto": 0,
    },
    "trend": {
      "materiality": 2,
      "monetaryCoherence": 0,
      "narrativeCoherence": 0,
      "pareto": 0,
    },
  },
  "gateAuditByMode": {
    "fail": {
      "change": 1,
      "contribution": 1,
      "outlier": 1,
      "trend": 2,
    },
    "relaxed": {},
    "strict": {
      "cliente_dormido": 1,
      "cliente_perdido": 1,
      "co_decline": 1,
      "cross_delta": 2,
      "meta_gap": 3,
      "meta_gap_temporal": 2,
      "migration": 2,
      "product_dead": 1,
      "stock_excess": 1,
      "stock_risk": 1,
    },
  },
  "gateFailCount": 5,
  "gatePassCount": 15,
  "gateRescuedByContributionUpException": 0,
  "onlyMonetaryCoherenceFails": {
    "items": [],
    "total": 0,
  },
  "poolSize": 20,
  "usdSourceDistributionInR3Fails": {},
}
`;

exports[`insight-engine gate failure audit (demo dataset, Fase 7.2) > USD: rule-failure breakdown 1`] = `
{
  "contributionPositiveAudit": {
    "failing": 1,
    "items": [
      {
        "accionPresent": true,
        "dimensionId": "categoria",
        "failedRules": [],
        "impactoUsdRounded": 1519,
        "impactoUsdSource": "recuperable",
        "meetsAllProposed": true,
        "meetsImpactoMin1pct": true,
        "meetsScore095": true,
        "meetsSeverityHigh": true,
        "member": "Limpieza",
        "metricId": "venta",
        "passes": true,
        "scoreRounded": 1,
        "severity": "CRITICA",
        "usdShareOfBusinessPct": 3.88,
      },
      {
        "accionPresent": true,
        "dimensionId": "canal",
        "failedRules": [
          "materiality",
          "pareto",
        ],
        "impactoUsdRounded": 664,
        "impactoUsdSource": "recuperable",
        "meetsAllProposed": true,
        "meetsImpactoMin1pct": true,
        "meetsScore095": true,
        "meetsSeverityHigh": true,
        "member": "Mostrador",
        "metricId": "venta",
        "passes": false,
        "scoreRounded": 1,
        "severity": "CRITICA",
        "usdShareOfBusinessPct": 1.7,
      },
    ],
    "passing": 1,
    "totalSelectedContributionUp": 2,
  },
  "failingItems": [
    {
      "accion": "Contactar a Mercado Central para entender la caída de frecuencia — confirmar si es estacional o requiere atención comercial.",
      "description": "Mercado Central tiene una frecuencia de compra de 13.00, 2.8σ por debajo del promedio del grupo (19.75). Cliente atendido por Ana González en Ahuachapán.",
      "dimensionId": "cliente",
      "failedRules": [
        "materiality",
      ],
      "impactoUsdRounded": 68,
      "impactoUsdSource": "cross_varAbs",
      "insightTypeId": "outlier",
      "member": "Mercado Central",
      "metricId": "frecuencia_compra",
      "rank": 9,
      "scoreRounded": 0.7083,
      "severity": "ALTA",
      "title": "↓ Mercado Central — frecuencia de compra baja",
    },
    {
      "accion": "Documentar qué hizo Mostrador para concentrar 167% del crecimiento (+664) y replicar el patrón en otros miembros del grupo antes de que se …",
      "description": "Mostrador pasó de 12,737 a 13,401 (+664). Representa el 167% del cambio total del grupo (398 en agregado).",
      "dimensionId": "canal",
      "failedRules": [
        "materiality",
        "pareto",
      ],
      "impactoUsdRounded": 664,
      "impactoUsdSource": "recuperable",
      "insightTypeId": "contribution",
      "member": "Mostrador",
      "metricId": "venta",
      "rank": 20,
      "scoreRounded": 1,
      "severity": "CRITICA",
      "title": "Mostrador aporta 167% del crecimiento agregada",
    },
    {
      "accion": "Confirmar con Supermercado Nacional si el salto de 133% es base nueva o un pedido extraordinario; ajustar forecast del próximo período segú…",
      "description": "Supermercado Nacional pasó de 109 a 254 (+133%). Es un salto fuera del rango habitual entre períodos consecutivos. Cliente atendido por Ana González en Ahuachapán.",
      "dimensionId": "cliente",
      "failedRules": [
        "materiality",
        "pareto",
      ],
      "impactoUsdRounded": 310,
      "impactoUsdSource": "cross_varAbs",
      "insightTypeId": "change",
      "member": "Supermercado Nacional",
      "metricId": "unidades",
      "rank": 21,
      "scoreRounded": 1,
      "severity": "CRITICA",
      "title": "Supermercado Nacional subió 133% vs período anterior",
    },
    {
      "accion": "Documentar qué hizo Mayoreo Santa Ana en estos 3 meses para crecer 133% y replicarlo en cuentas con perfil similar.",
      "description": "Mayoreo Santa Ana acumula 3 meses con crecimiento de 133%. La pendiente es estadísticamente clara (R² ≥ 0.7): no es ruido del mes. Cliente atendido por Ana González en Santa Ana.",
      "dimensionId": "cliente",
      "failedRules": [
        "materiality",
      ],
      "impactoUsdRounded": 196,
      "impactoUsdSource": "cross_varAbs",
      "insightTypeId": "trend",
      "member": "Mayoreo Santa Ana",
      "metricId": "skus_activos",
      "rank": 22,
      "scoreRounded": 1,
      "severity": "ALTA",
      "title": "Mayoreo Santa Ana — crecimiento sostenido (133% en 3 meses)",
    },
  ],
  "failsByMetricAndRule": {
    "frecuencia_compra": {
      "materiality": 1,
      "monetaryCoherence": 0,
      "narrativeCoherence": 0,
      "pareto": 0,
    },
    "skus_activos": {
      "materiality": 1,
      "monetaryCoherence": 0,
      "narrativeCoherence": 0,
      "pareto": 0,
    },
    "unidades": {
      "materiality": 1,
      "monetaryCoherence": 0,
      "narrativeCoherence": 0,
      "pareto": 1,
    },
    "venta": {
      "materiality": 1,
      "monetaryCoherence": 0,
      "narrativeCoherence": 0,
      "pareto": 1,
    },
  },
  "failsByRule": {
    "materiality": 4,
    "monetaryCoherence": 0,
    "narrativeCoherence": 0,
    "pareto": 2,
  },
  "failsByTypeAndRule": {
    "change": {
      "materiality": 1,
      "monetaryCoherence": 0,
      "narrativeCoherence": 0,
      "pareto": 1,
    },
    "contribution": {
      "materiality": 1,
      "monetaryCoherence": 0,
      "narrativeCoherence": 0,
      "pareto": 1,
    },
    "outlier": {
      "materiality": 1,
      "monetaryCoherence": 0,
      "narrativeCoherence": 0,
      "pareto": 0,
    },
    "trend": {
      "materiality": 1,
      "monetaryCoherence": 0,
      "narrativeCoherence": 0,
      "pareto": 0,
    },
  },
  "gateAuditByMode": {
    "fail": {
      "change": 1,
      "contribution": 1,
      "outlier": 1,
      "trend": 1,
    },
    "relaxed": {},
    "strict": {
      "cliente_dormido": 1,
      "cliente_perdido": 1,
      "co_decline": 1,
      "contribution": 1,
      "cross_delta": 2,
      "meta_gap": 5,
      "meta_gap_temporal": 2,
      "migration": 2,
      "product_dead": 1,
      "stock_excess": 1,
      "stock_risk": 1,
    },
  },
  "gateFailCount": 4,
  "gatePassCount": 18,
  "gateRescuedByContributionUpException": 1,
  "onlyMonetaryCoherenceFails": {
    "items": [],
    "total": 0,
  },
  "poolSize": 22,
  "usdSourceDistributionInR3Fails": {},
}
`;
